@@ -21,6 +21,7 @@ Verilator 4.217 devel
 
 * Support up to 64 bit enums for .next/.prev/.name (#3244). [Alexander Grobman]
 * Fix MSWIN compile error (#2681). [Unai Martinez-Corral]
+* Fix break under foreach loop (#3230).
 * Fix VL_STREAML_FAST_QQI with 64 bit left-hand-side (#3232) (#3235)
 * Fix $sformat of inputs/outputs (#3236). [Adrien Le Masle]
 
